<resources>
    <string name="app_name">IntentIzza</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_form_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_place">PILIH TEMPAT YANG KAMU SUKA</string>
    <string name="_garden">KEBUN</string>
    <string name="_zoo">KEBUN BINATANG</string>
    <string name="_park">TAMAN</string>
    <string name="choose">PILIH</string>
    <string name="_data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
    <string name="back_to_main_page">KEMBALI</string>
</resources>